--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -36,5 +36,6 @@ jobs:
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
+        platforms: linux/amd64, linux/arm64, linux/arm/v7
         cache-to: type=gha,mode=max
 
