--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ homepage = "https://github.com/thomas-mauran/chess-tui"
 repository = "https://github.com/thomas-mauran/chess-tui"
 
 [dependencies]
+clap = { version = "4.4.11", features = ["derive"] }
 crossterm = "0.26.1"
-ratatui = "0.24.0"
+dirs = "5.0.1"
+ratatui = "0.26.1"
+uci = "0.1.3"
 
 [features]
 chess-tui = []
