chore: Enable Link-Time Optimization (LTO) and other size-related optimizations (#80)
* feat: enable LTO

* feat: add more size-optimization features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,9 @@ toml = "0.5.8"
 [features]
 chess-tui = []
 default = ["chess-tui"]
+
+[profile.release]
+lto = true
+codegen-units = 1
+opt-level = "z"
+strip = true
