fix: social card and ci
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/.github/workflows/test-deploy-website.yml
+++ b/.github/workflows/test-deploy-website.yml
@@ -15,6 +15,11 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Navigate to website directory
+      working-directory: website
+      run: |
+        echo "Navigating to the website directory"
+
     - uses: actions/setup-node@v4
       with:
         node-version: 18
