--- a/.github/workflows/test-deploy-website.yml
+++ b/.github/workflows/test-deploy-website.yml
@@ -13,19 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Navigate to website directory
-      working-directory: website
-      run: |
-        echo "Navigating to the website directory"
-
     - uses: actions/setup-node@v4
       with:
         node-version: 18
         cache: yarn
+        cache-dependency-path: website/yarn.lock
 
     - name: Install dependencies
       run: yarn install --frozen-lockfile
+      working-directory: website
     - name: Test build website
       run: yarn build
+      working-directory: website
