fix: ci for main build
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -19,11 +19,15 @@ jobs:
       with:
         node-version: 18
         cache: yarn
+        cache-dependency-path: website/yarn.lock
 
     - name: Install dependencies
       run: yarn install --frozen-lockfile
+      working-directory: website
+
     - name: Build website
       run: yarn build
+      working-directory: website
 
     - name: Upload Build Artifact
       uses: actions/upload-pages-artifact@v3
