--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,7 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
-  pull_request:
+  push:
     branches:
     - main
     # Review gh actions docs if you want to further define triggers, paths, etc
