--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ toml = "0.5.8"
 async-trait = "0.1.83"
 tokio = { version = "1.41.1", features = ["full"] }
 log = "0.4.22"
+tokio-util = { version = "0.7.12", features = ["full"] } 
+futures = "0.3.31"
 
 
 [features]
