migrate to ruci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ repository = "https://github.com/thomas-mauran/chess-tui"
 clap = { version = "4.4.11", features = ["derive"] }
 dirs = "5.0.1"
 ratatui = "0.28.1"
-uci = "0.2.1"
+ruci = { version = "2.1.0", features = ["engine-sync"] }
 toml = "0.5.8"
 log = "0.4.25"
 simplelog = "0.12.2"
 chrono = "0.4.39"
+shakmaty = { version = "0.27.3", default-features = false }
 
 [features]
 chess-tui = []
