chore: update crates io description
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.6.2"
 authors = ["Thomas Mauran"]
 license = "MIT"
 edition = "2021"
-description = "A rusty chess game in your terminal 🦀"
+description = "Play chess from your terminal 🦀"
 keywords = ["chess", "tui", "graphics", "game", "board"]
 homepage = "https://github.com/thomas-mauran/chess-tui"
 repository = "https://github.com/thomas-mauran/chess-tui"
