feat: Started the implementation of pgn export via move_history_to_pgn_content
Signed-off-by: Andrei Nicula <andreinicula64@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ log = "0.4.25"
 simplelog = "0.12.2"
 chrono = "0.4.39"
 shakmaty = { version = "0.27.3", default-features = false }
+schachmatt = "0.3.0"
 
 [features]
 chess-tui = []
