--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ log = "0.4.25"
 simplelog = "0.12.2"
 chrono = "0.4.39"
 shakmaty = "0.27.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [features]
 chess-tui = []
