refactor: shakmaty integration / huge refactor for v2(#137)
* replace PieceColor with shakmaty::Color

* remove unnecessaries

* finish converting GameBoard

Removed:
- `add_piece_to_taken_pieces`: removed because shakmaty will make this trivial
- `is_latest_move_en_passant`: only used in `execute_move`, which will get revamped, and `add_piece_to_taken_piece`, which was removed
- `consecutive_non_pawn_or_capture` getter and setter. I made the field public instead, because there's no additional work being done by the getter/setter

Refactored:
- `board_history` -> `position_history` to better reflect shakmaty's naming. `board` was removed because we were already using `position_history` to store the current position, no reason to store it twice.
- merged `{white,black}_taken_pieces` to `taken_pieces: Vec<Piece>`

* feat: fix game logic

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* wip: refactoring the code

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* wip: bot fixed

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: board turn and mouse select

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: promotion with mouse

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: multiplayer

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: tests

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* refactor: huge
- improve the toml loading with serde
- improve the methods and remove useless mut
- remove some unwraps

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* chore: clean the code

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* docs: update the documentation

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* chore: fmt

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: small bugs

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* fix: better error handling with popup and clean code

Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

* chore: huge code c

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ toml = "0.5.8"
 log = "0.4.25"
 simplelog = "0.12.2"
 chrono = "0.4.39"
-shakmaty = { version = "0.27.3", default-features = false }
+shakmaty = "0.27.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [features]
 chess-tui = []
