--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/thomas-mauran/chess-tui"
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 dirs = "5.0.1"
-ratatui = "0.28.1"
+ratatui = { version = "0.28.1", features = ["serde"] }
 ruci = { version = "2.1.0", features = ["engine-sync"] }
 toml = "0.5.8"
 log = "0.4.25"
@@ -20,6 +20,10 @@ simplelog = "0.12.2"
 chrono = "0.4.39"
 shakmaty = "0.27.3"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+[dev-dependencies]
+tempfile = "3.8"
 
 [features]
 chess-tui = []
