--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ chrono = "0.4.39"
 shakmaty = "0.27.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
+dotenv = "0.15"
 
 [dev-dependencies]
 tempfile = "3.8"
