--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -2,6 +2,10 @@ name: Build and push docker image
 
 on:
   workflow_call:
+    inputs:
+      image-tags:
+        required: true
+        type: string
 
 env:
   REGISTRY: ghcr.io
@@ -14,6 +18,8 @@ jobs:
       packages: write
       contents: read
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
     - name: Setup Docker buildx
       uses: docker/setup-buildx-action@v3
     - name: Log in to the Container registry
@@ -27,7 +33,8 @@ jobs:
       id: meta
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-        tags: ${{ inputs.image-tags }}
+        tags: |
+          type=raw,value=${{ inputs.image-tags }}
         flavor: latest=false
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
@@ -38,4 +45,3 @@ jobs:
         cache-from: type=gha
         platforms: linux/amd64, linux/arm64, linux/arm/v7
         cache-to: type=gha,mode=max
-
