--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
 dotenv = "0.15"
+rodio = "0.18"
 
 [dev-dependencies]
 tempfile = "3.8"
