ci: add libasound2-dev
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/.github/workflows/release_cargo.yml
+++ b/.github/workflows/release_cargo.yml
@@ -13,6 +13,9 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Install ALSA development libraries
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev
+
       - uses: katyo/publish-crates@v2
         with:
           registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
