--- a/.github/workflows/release_binary.yml
+++ b/.github/workflows/release_binary.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         name: Install the Rust toolchain
 
+      - name: Install ALSA development libraries
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev
+
       - uses: Swatinem/rust-cache@v2
         name: Use cached dependencies and artifacts
 
