--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,23 +15,24 @@ jobs:
     strategy:
       matrix:
         toolchain:
-          - stable
-          - beta
-          - nightly
+        - stable
+        - beta
+        - nightly
         os:
-          - macos-latest
-          - ubuntu-latest
-          - ubuntu-24.04-arm
-          - windows-latest
+        - macos-latest
+        - ubuntu-latest
+        - ubuntu-24.04-arm
+        - windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-      - uses: Swatinem/rust-cache@v2
-      - name: Install ALSA development libraries
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev
-      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-        continue-on-error: true
-      - run: cargo check --verbose
-        continue-on-error: true
-      - run: cargo test --verbose
-        continue-on-error: true
+    - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
+    - name: Install ALSA development libraries (Linux only)
+      if: matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-24.04-arm'
+      run: sudo apt-get update && sudo apt-get install -y libasound2-dev
+    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      continue-on-error: true
+    - run: cargo check --verbose
+      continue-on-error: true
+    - run: cargo test --verbose
+      continue-on-error: true
