--- a/.github/workflows/release_binary.yml
+++ b/.github/workflows/release_binary.yml
@@ -2,53 +2,54 @@ name: Upload binary to published release
 
 on:
   release:
-    types: [published]
+    types: [ published ]
 
 jobs:
   build-and-upload-binary:
     name: Build and Upload Binary to release
     strategy:
-      matrix: 
+      matrix:
         include:
-          - { os: "macos-latest", target: "aarch64-apple-darwin" }
-          - { os: "ubuntu-latest", target: "x86_64-unknown-linux-gnu" }
-          - { os: "ubuntu-24.04-arm", target: "aarch64-unknown-linux-gnu" }
-          - { os: "windows-latest", target: "x86_64-pc-windows-msvc", ext: ".exe" }
+        - { os: "macos-latest", target: "aarch64-apple-darwin" }
+        - { os: "ubuntu-latest", target: "x86_64-unknown-linux-gnu" }
+        - { os: "ubuntu-24.04-arm", target: "aarch64-unknown-linux-gnu" }
+        - { os: "windows-latest", target: "x86_64-pc-windows-msvc", ext: ".exe" }
     runs-on: ${{ matrix.os }}
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout project
+    - uses: actions/checkout@v4
+      name: Checkout project
 
-      - uses: dtolnay/rust-toolchain@stable
-        name: Install the Rust toolchain
-        # note: would require setting `targets` if `matrix.target` wasn't host-default
+    - uses: dtolnay/rust-toolchain@stable
+      name: Install the Rust toolchain
+      # note: would require setting `targets` if `matrix.target` wasn't host-default
 
-      - name: Install ALSA development libraries
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev
+    - name: Install ALSA development libraries (Linux only)
+      if: matrix.os == 'ubuntu-latest' || matrix.os == 'ubuntu-24.04-arm'
+      run: sudo apt-get update && sudo apt-get install -y libasound2-dev
 
-      - uses: Swatinem/rust-cache@v2
-        name: Use cached dependencies and artifacts
+    - uses: Swatinem/rust-cache@v2
+      name: Use cached dependencies and artifacts
 
-      - run: cargo build --release --target ${{ matrix.target }}
-        name: Build release binary
+    - run: cargo build --release --target ${{ matrix.target }}
+      name: Build release binary
 
-      - run: |
-          TAG=${{ github.event.release.tag_name }}
-          TAR_NAME="chess-tui-$TAG-${{ matrix.target }}.tar.gz"
-          echo "TAR_NAME=$TAR_NAME" >> $GITHUB_ENV
+    - run: |
+        TAG=${{ github.event.release.tag_name }}
+        TAR_NAME="chess-tui-$TAG-${{ matrix.target }}.tar.gz"
+        echo "TAR_NAME=$TAR_NAME" >> $GITHUB_ENV
 
-          EXE_NAME="chess-tui${{ matrix.ext }}"
-          cp "target/${{ matrix.target }}/release/$EXE_NAME" .
-          tar -czvf "$TAR_NAME" ./chess-tui
-        shell: bash # needed for windows
-        name: Set TAR_NAME from tag and platform, create tar file containing the binary
+        EXE_NAME="chess-tui${{ matrix.ext }}"
+        cp "target/${{ matrix.target }}/release/$EXE_NAME" .
+        tar -czvf "$TAR_NAME" ./chess-tui
+      shell: bash # needed for windows
+      name: Set TAR_NAME from tag and platform, create tar file containing the binary
 
-      - uses: softprops/action-gh-release@v2
-        name: Upload binary to release
-        if: github.ref_type == 'tag'
-        with:
-          files: ${{ env.TAR_NAME }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: softprops/action-gh-release@v2
+      name: Upload binary to release
+      if: github.ref_type == 'tag'
+      with:
+        files: ${{ env.TAR_NAME }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
