ci: fix docker build ci
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/.github/workflows/release_docker.yml
+++ b/.github/workflows/release_docker.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   docker_push:
     name: Build & push Docker image
+    permissions:
+      packages: write
+      contents: read
     uses: ./.github/workflows/docker_push.yml
     with:
       image-tags: ${{ github.event.release.tag_name }}
