--- a/.github/workflows/generate-blog-post.yml
+++ b/.github/workflows/generate-blog-post.yml
@@ -61,6 +61,7 @@ jobs:
           "${{ steps.release-info.outputs.body }}"
 
     - name: Create branch and commit blog post
+      id: commit
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
@@ -71,13 +72,15 @@ jobs:
         git add website/blog/*.md
         if git diff --staged --quiet; then
           echo "No changes to commit"
-          exit 0
+          echo "has_changes=false" >> $GITHUB_OUTPUT
         else
           git commit -m "docs: add blog post for release ${{ steps.release-info.outputs.version }}"
           git push -u origin "$BRANCH_NAME"
+          echo "has_changes=true" >> $GITHUB_OUTPUT
         fi
 
     - name: Create Pull Request
+      if: steps.commit.outputs.has_changes == 'true'
       uses: peter-evans/create-pull-request@v6
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
