ci: intel mac os Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,6 +20,7 @@ jobs:
         - nightly
         os:
         - macos-latest
+        - macos-15-intel
         - ubuntu-latest
         - ubuntu-24.04-arm
         - windows-latest
