--- a/.github/workflows/release_binary.yml
+++ b/.github/workflows/release_binary.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         include:
         - { os: "macos-latest", target: "aarch64-apple-darwin" }
+        - { os: "macos-15-intel", target: "x86_64-apple-darwin" }
         - { os: "ubuntu-latest", target: "x86_64-unknown-linux-gnu" }
         - { os: "ubuntu-24.04-arm", target: "aarch64-unknown-linux-gnu" }
         - { os: "windows-latest", target: "x86_64-pc-windows-msvc", ext: ".exe" }
