--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,14 +24,15 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
 dotenv = "0.15"
-rodio = "0.18"
+rodio = { version = "0.18", optional = true }
 
 [dev-dependencies]
 tempfile = "3.8"
 
 [features]
 chess-tui = []
-default = ["chess-tui"]
+sound = ["rodio"]
+default = ["chess-tui", "sound"]
 
 [profile.release]
 lto = true
